--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 			</plugin>
 			<!-- Jacoco Plugin -->
 			<plugin>
-				<groupId>org.jacoco<groupId>
+				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
 				<executions>
