--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
 					</outputFormats>
 				</configuration>
 			</plugin>
+				<!-- Dependency-check -->
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>6.1.6</version>
+				<configuration>
+					<format>ALL</format>
+					<failBuildOnCVSS>9</failBuildOnCVSS>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
